# sourceror

./: .gitignore  Cargo.toml  README.md  ast.txt  build.bat  exec.bat  package-lock.json  package.json  source.js  webpack.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml
dist-static/: package.json
e2e/: .gitignore  Cargo.toml  README.md  package.json  webpack.config.js
e2e/js/: cache.js  compileAndRun.js  harness.js  index.js  interface.js  platform.js  test.js  transcoder.js  utils.js  wrapper.js
e2e/js/tests/: functions.js  tailCalls.js
e2e/src/: lib.rs
e2e/static/: index.html  test.html
e2e/tests/: app.rs
js/: index.js
lib-asttoir/: Cargo.toml
lib-asttoir/src/: lib.rs
lib-backend-wasm/: Cargo.toml
lib-backend-wasm/src/: func.rs  global_var.rs  lib.rs  multi_value_polyfill.rs  mutcontext.rs  opt_var_conv.rs  pre_traverse.rs  scratch.rs  string_prim_inst.rs  var_conv.rs
lib-backend-wasm/src/gc/: leaky.rs  mod.rs
lib-backend-wasm/src/gc/cheney/: copy_children_elements.rs  copy_funcs.rs  copy_indirect_elements.rs  do_cheney.rs  mod.rs  wasmtest.rs
lib-frontend-estree/: Cargo.toml
lib-frontend-estree/src/: attributes.rs  builtins.rs  compact_state.rs  dep_graph.rs  error.rs  estree.rs  extensions.rs  frontendvar.rs  func.rs  import_name_resolver.rs  importer.rs  lib.rs  parse_state.rs  typecheck.rs
lib-frontend-estree/src/func/: constraint.rs  mod.rs  post_parse.rs  pre_parse.rs  undoable_hash_map.rs  vartype_superset.rs  varusage.rs
lib-ir/: Cargo.toml
lib-ir/src/: error.rs  lib.rs  primfunc.rs  superset.rs
lib-ir/src/opt/: declaration_propagate.rs  declaration_remove_redundant.rs  landing_context.rs  mod.rs  propagate.rs  relabeller.rs  typecast.rs  unreachable.rs
lib-ir/src/opt/inline/: mod.rs  populate_properties.rs  relabel_site.rs
lib-ir/src/opt/relabeller/: mod.rs  relabel.rs
lib-projstd/: Cargo.toml
lib-projstd/src/: iter.rs  lib.rs  log.rs  searchablevec.rs  subslice.rs  tuple.rs
lib-projstd/src/iter/: mod.rs  once_with.rs  scan_ref.rs  sequential_count.rs  special_last.rs
lib-wasmgen/: Cargo.toml
lib-wasmgen/src/: codewriter.rs  lib.rs  scratch.rs  serialize.rs  write.rs
source-compiler/: Cargo.toml
source-compiler/src/: lib.rs  main.rs
source-compiler/src/backend/: mod.rs
source-compiler/src/frontend/: mod.rs
source-compiler/src/ir/: mod.rs
sourceror-driver/: .gitignore  README.md  out.ir  package-lock.json  package.json  postbuild.js  tsconfig.json
sourceror-driver/src/: cache.ts  cli.ts  index.ts  load-wasm.d.ts  load-wasm.js  platform.ts  transcoder.ts  wasm.d.ts  wrapper.ts
src/: lexer.rs  lib.rs  main.rs
src/token/: token.rs
src/wasmgen/: codewriter.rs  mod.rs  serialize.rs  write.rs
stage-wasmtest/: loader.js  wasm_test_driver.js  wasm_test_driver_bg.wasm
static/: index.html  index.js  loader.js
static-wasmtest/: index.js  server.py
utils/: build.bat  build_wasmtest.bat  exec.bat  wasmtest.bat  web_loader.js
wasm-test-driver/: Cargo.toml
wasm-test-driver/src/: lib.rs
wasm-test-harness/: Cargo.toml
wasm-test-harness/src/: lib.rs
wasm-test-local/: Cargo.toml
wasm-test-local/src/: main.rs
wasm_support_check/: package.json
wasm_support_check/src/: index.html  index.js
wiki_files/: diagrams.pptx  sequence_diagram.txt
