[workspace]
members = [
    "source-compiler",
    "lib-projstd",
    "lib-wasmgen",
    "lib-ir",
    "lib-backend-wasm",
    "lib-frontend-estree",
    "wasm-test-harness",
    "wasm-test-driver",
    "wasm-test-local",
    "e2e"
]
default-members = [
    "source-compiler",
]

# Code is generally not exception-safe, so we do not want to catch any panics

[profile.release]
lto = true
panic = "abort"
