[package]
name = "asttoir"
version = "0.1.0"
authors = ["Joel Lee <lee.yi.jie.joel@gmail.com>"]
description = "Source AST to IR"
license = "MIT/Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
