[package]
name = "backend-wasm"
version = "0.1.0"
authors = ["Bernard Teo <btzy1996@hotmail.com>"]
description = "Compiler backend that converts IR to Wasm binary"
license = "MIT/Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
wasmgen = { path = "../lib-wasmgen" }
ir = { path = "../lib-ir" }
