[package]
name = "ir"
version = "0.1.0"
authors = ["Bernard Teo <btzy1996@hotmail.com>"]
description = "Source compiler intermediate representation"
license = "MIT/Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
