[package]
name = "source-compiler"
version = "0.1.0"
authors = ["Bernard Teo <btzy1996@hotmail.com>"]
description = "Source to WebAssembly compiler"
license = "MIT/Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasmgen = { path = "../lib-wasmgen" }
ir = { path = "../lib-ir" }
backend-wasm = { path = "../lib-backend-wasm" }
frontend-estree = { path = "../lib-frontend-estree" }
projstd = { path = "../lib-projstd" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
