[package]
name = "wasm-test-local"
version = "0.1.0"
authors = ["Bernard Teo <btzy1996@hotmail.com>"]
description = "Unit testing for backend-wasm"
license = "MIT/Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wasmtest = []

[dependencies]
wasm-test-harness = { path = "../wasm-test-harness" }
ir = { path = "../lib-ir" }
backend-wasm = { path = "../lib-backend-wasm" }
wasmgen = { path = "../lib-wasmgen" }
wasm-bindgen = "0.2"
